--- a/css/styles.css
+++ b/css/styles.css
@@ -1889,36 +1889,23 @@ input[type='radio'].visually-hidden {
 
 .services-control:hover {
 	background-color: #293449;
-	-webkit-box-shadow: 0px 1px 0 0 #fff, inset 0px 1px 0 0 #fff;
-	        box-shadow: 0px 1px 0 0 #fff, inset 0px 1px 0 0 #fff;
-}
-
-.services-control:active {
-	background-color: #fff;
-	color: #32425c;
+	color: #fff;
 }
 
 .services-control:focus {
 	outline: none;
-	background-color: #fff;
-	color: #32425c;
+	background-color: #293449;
+	color: #fff;
 }
 
 .services-control-current {
 	background-color: #fff;
 	color: #32425c;
-	-webkit-box-shadow: none;
-	        box-shadow: none;
+	-webkit-box-shadow: 0px 1px 0 0 #fff, inset 0px 1px 0 0 #fff;
+	        box-shadow: 0px 1px 0 0 #fff, inset 0px 1px 0 0 #fff;
 }
 
 .services-control-current:hover {
-	background-color: #fff;
-	color: #32425c;
-	-webkit-box-shadow: none;
-	box-shadow: none;
-}
-
-.services-control-current:active {
 	background-color: #fff;
 	color: #32425c;
 }
